[package]
name = "mtx-cli"
version = "0.1.0"
edition = "2021"
categories = []
keywords = []
description = """
Command interpreter and structured library designed for matrix operations.
"""
include = [
    "Cargo.toml",
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "../README.md",
    "src/**/*",
]
publish = true
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sydo26/mtx"
rust-version = "1.70.0"
authors = ["sydo26 <sydoafk@gmail.com>"]

[[bin]]
bench = false
name = "mtx"
path = "./src/main.rs"


[features]
default = []
full = []


[package.metadata.docs.rs]
features = ["full"]
targets = ["x86_64-unknown-linux-gnu"]
